# BlackWidow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Core/: CMakeLists.txt
Core/Browser/: Browser.cpp  Browser.h
Core/CSS/: CSSParser.cpp  CSSParser.h
Core/DOM/: DOMTree.cpp  DOMTree.h
Core/HTML/: HTMLParser.cpp  HTMLParser.h
Core/JavaScript/: JSInterpreter.cpp  JSInterpreter.h
Core/Network/: HttpClient.h  NetworkManager.cpp  NetworkManager.h  README.md  SocketManager.h  TrafficAnalyzer.h
Core/Rendering/: CMakeLists.txt  RenderingEngine.cpp  RenderingEngine.h
Core/WebAssembly/: CMakeLists.txt  WasmEngine.cpp  WasmEngine.h  WasmIntegration.cpp  WasmIntegration.h  WasmParser.cpp  WasmParser.h  WasmRuntime.cpp  WasmRuntime.h
Examples/: render_example.cpp  test_page.html
Security/: CMakeLists.txt
Security/Analyzer/: CMakeLists.txt  CsrfAnalyzer.cpp  CsrfAnalyzer.h  README.md  SecurityAnalyzer.cpp  SecurityAnalyzer.h  SqlInjectionAnalyzer.cpp  SqlInjectionAnalyzer.h  XssAnalyzer.cpp  XssAnalyzer.h  XxeAnalyzer.cpp  XxeAnalyzer.h
Security/Interceptor/: ProxyInterceptor.cpp  ProxyInterceptor.h
Security/Payloads/: CsrfPayloads.cpp  CsrfPayloads.h  README.md  SqlInjectionPayloads.cpp  SqlInjectionPayloads.h  XssPayloads.cpp  XssPayloads.h  XxePayloads.cpp  XxePayloads.h
Security/Scanners/SQLInjection/: SQLInjectionScanner.cpp  SQLInjectionScanner.h
Security/Scanners/TechDetector/: TechDetector.cpp  TechDetector.h
Tools/: CMakeLists.txt
Tools/BurpLike/: CMakeLists.txt  Intruder.cpp  Intruder.h  Repeater.cpp  Repeater.h
UI/: CMakeLists.txt
UI/DevTools/: CMakeLists.txt  DOMInspector.cpp  DOMInspector.h  DevConsole.cpp  DevConsole.h  DevToolsPanel.cpp  DevToolsPanel.h  JSDebugger.cpp  JSDebugger.h
UI/Themes/: CMakeLists.txt  ThemeConfig.cpp  ThemeConfig.h  TorPurple.css
UI/Widgets/: BurpLikeTools.cpp  BurpLikeTools.h  DevToolsWidget.cpp  DevToolsWidget.h  MainWindow.cpp  MainWindow.h
Utils/: CMakeLists.txt
Utils/Config/: ConfigManager.cpp  ConfigManager.h
Utils/Logging/: Logger.cpp  Logger.h
